--- a/AI-Meta-Podcast/index.html
+++ b/AI-Meta-Podcast/index.html
@@ -84,7 +84,7 @@
             
             <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; border-radius: 8px; margin-top: 15px; margin-bottom: 15px;">
                 <iframe 
-                    src="https://youtu.be/_z2honKwNjk" 
+                    src="https://www.youtube.com/embed/_z2honKwNjk" 
                     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
